--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-R1T93Z98S1');
+    gtag('config', 'G-R36HDGLMVP');
   </script>
 
   <meta charset="UTF-8">
