fixed scroll, about us design

--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
   </div>
 </section>
 
+<section id="download-app" class="download-app-section">
+  <div class="download-app-wrapper">
+    <h2>Download our app to start now!</h2>
+    <div class="download-app-icons">
+      <a href="#" target="_blank">
+        <img src="img/appstore.svg" alt="Download on the App Store">
+      </a>
+      <a href="#" target="_blank">
+        <img src="img/googleplay.svg" alt="Get it on Google Play">
+      </a>
+    </div>
+  </div>
+</section>
+
 <section id="faq" class="faq-section">
   <h2 class="faq-title">Frequently Asked Questions</h2>
   <div class="faq-container">
