added Meta Title, Meta Description, CTA & alt-text for images

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-3JXWZ0TF13"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -9,14 +8,13 @@
     gtag('js', new Date());
     gtag('config', 'G-3JXWZ0TF13');
   </script>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BreatheBetter</title>
+  <title>Best Breathing Exercises for Stress & Focus | Try Now Free</title>
+  <meta name="description" content="Discover the most effective breathing techniques for relaxation, focus, and better sleep. Learn 4-7-8 breathing, box breathing, and more. Start today!">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 <nav class="navbar">
   <div class="container">
     <a href="#" class="logo">BreatheBetter</a>
@@ -33,137 +31,129 @@
     </div>
   </div>
 </nav>
-
 <header class="hero">
   <div class="hero-content">
     <h1>Master Your Breathing: Easy Methods to Reduce Stress, Improve Sleep & Boost Focus</h1>
     <p>Controlled breathing helps manage stress, sharpen focus, and promote restful sleep. Explore proven techniques to calm your mind, ease anxiety, and improve lung health.</p>
   </div>
 </header>
-
 <section id="techniques" class="techniques-section">
   <h2>Top Breathwork Techniques for a Calm Mind</h2>
   <div class="techniques-wrapper">
     <div class="techniques-container">
       <div class="technique">
-        <img src="img/breathwork-1.png" alt="4-7-8 Breathing">
+        <img src="img/breathwork-1.png" alt="Person practicing the 4-7-8 breathing method">
         <p><strong>4-7-8 Breathing:</strong> A Quick Way to Relax</p>
       </div>
       <div class="technique">
-        <img src="img/breathwork-2.png" alt="Box Breathing">
+        <img src="img/breathwork-2.png" alt="Illustration of box breathing with equal inhale, hold, exhale, hold">
         <p><strong>Box Breathing:</strong> For Focus and Clarity</p>
       </div>
       <div class="technique">
-        <img src="img/breathwork-3.png" alt="Diaphragmatic Breathing">
+        <img src="img/breathwork-3.png" alt="Diagram showing diaphragmatic breathing with belly movement">
         <p><strong>Diaphragmatic Breathing:</strong> For Better Oxygen Flow</p>
       </div>
     </div>
-
     <div class="tech-arrows">
       <button class="tech-arrow left-arrow">
-        <img src="img/arrow-left.svg" alt="Left Arrow">
+        <img src="img/arrow-left.svg" alt="Left arrow to scroll techniques">
       </button>
       <button class="tech-arrow right-arrow">
-        <img src="img/arrow-right.svg" alt="Right Arrow">
+        <img src="img/arrow-right.svg" alt="Right arrow to scroll techniques">
       </button>
     </div>
   </div>
 </section>
-
 <section id="improve-breathing" class="improve-section">
   <h2>Improve Your Breathing with These Techniques</h2>
   <div class="improve-container">
     <div class="improve-item">
-      <img src="img/improve-1.png" alt="Breathing Relaxation">
+      <img src="img/improve-1.png" alt="Calm person demonstrating deep breathing for relaxation">
       <h3>Breathing Relaxation</h3>
       <p>Learn how to use deep breathing to release tension and find inner peace.</p>
     </div>
     <div class="improve-item">
-      <img src="img/improve-2.png" alt="Energy Boosting">
+      <img src="img/improve-2.png" alt="Energetic person using breathwork to boost energy">
       <h3>Energy Boosting</h3>
       <p>Use specific breathing techniques to boost energy and mental clarity.</p>
     </div>
     <div class="improve-item">
-      <img src="img/improve-3.png" alt="Breath Awareness">
+      <img src="img/improve-3.png" alt="Person focused on breath awareness during meditation">
       <h3>Breath Awareness</h3>
       <p>Enhance mindfulness and concentration by focusing on your breath.</p>
     </div>
   </div>
 </section>
-
 <section id="blog" class="blog-section">
   <h2>Explore Our Blog</h2>
   <div class="blog-wrapper">
     <div class="blog-container">
       <div class="blog-item">
-        <img src="img/blog-1.png" alt="Workplace Wellness">
+        <img src="img/blog-1.png" alt="Office team discussing workplace wellness programs">
         <p><strong>Workplace Wellness:</strong> Do workplace wellness programs work? Here’s what to know</p>
       </div>
       <div class="blog-item">
-        <img src="img/blog-2.png" alt="Mental Health & Relationships">
+        <img src="img/blog-2.png" alt="Two friends talking about supporting men's mental health">
         <p><strong>Mental Health, Relationships:</strong> How to support the mental health of the men in your life</p>
       </div>
       <div class="blog-item">
-        <img src="img/blog-3.png" alt="Breathing & Relaxation">
+        <img src="img/blog-3.png" alt="Person practicing deep breathing outdoors for relaxation">
         <p><strong>Breathing & Relaxation:</strong> How deep breathing can help reduce daily stress</p>
       </div>
       <div class="blog-item">
-        <img src="img/blog-4.png" alt="Mindfulness & Focus">
+        <img src="img/blog-4.png" alt="Individual meditating to achieve mindfulness and focus">
         <p><strong>Mindfulness & Focus:</strong> Simple breathwork techniques to improve concentration</p>
       </div>
     </div>
     <div class="blog-arrows">
       <button class="blog-arrow left-arrow">
-        <img src="img/arrow-left.svg" alt="Left Arrow">
+        <img src="img/arrow-left.svg" alt="Left arrow to scroll blog posts">
       </button>
       <button class="blog-arrow right-arrow">
-        <img src="img/arrow-right.svg" alt="Right Arrow">
+        <img src="img/arrow-right.svg" alt="Right arrow to scroll blog posts">
       </button>
     </div>
   </div>
 </section>
-
 <section id="download-app" class="download-app-section">
   <div class="download-app-wrapper">
     <h2>Download our app to start now!</h2>
     <div class="download-app-icons">
       <a href="#" target="_blank">
-        <img src="img/appstore.svg" alt="Download on the App Store">
+        <img src="img/appstore.svg" alt="App Store button for iOS devices">
       </a>
       <a href="#" target="_blank">
-        <img src="img/googleplay.svg" alt="Get it on Google Play">
+        <img src="img/googleplay.svg" alt="Google Play button for Android devices">
       </a>
     </div>
   </div>
 </section>
-
 <section id="faq" class="faq-section">
   <h2 class="faq-title">Frequently Asked Questions</h2>
   <div class="faq-container">
     <div class="faq-item">
       <button class="faq-question">
         What are the key health benefits of breathwork?
-        <img src="img/arrow-down.svg" alt="Expand" class="faq-icon">
+        <img src="img/arrow-down.svg" alt="Expand icon for FAQ">
       </button>
       <div class="faq-answer">Breathwork improves focus, reduces stress, and enhances overall well-being.</div>
     </div>
     <div class="faq-item">
       <button class="faq-question">
         How often should I practice breathing exercises?
-        <img src="img/arrow-down.svg" alt="Expand" class="faq-icon">
+        <img src="img/arrow-down.svg" alt="Expand icon for FAQ">
       </button>
       <div class="faq-answer">It's recommended to practice at least 5-10 minutes daily for best results.</div>
     </div>
     <div class="faq-item">
       <button class="faq-question">
         Can deep breathing help with anxiety?
-        <img src="img/arrow-down.svg" alt="Expand" class="faq-icon">
+        <img src="img/arrow-down.svg" alt="Expand icon for FAQ">
       </button>
       <div class="faq-answer">Yes! Deep breathing activates the parasympathetic nervous system, reducing anxiety.</div>
     </div>
   </div>
 </section>
-
 <section id="contact" class="contact-section">
   <div class="contact-container">
     <div class="contact-info">
@@ -177,19 +167,15 @@
       </ul>
       <h3>Our Mission:</h3>
       <p class="mission-text">
-        <em>
-          "We are dedicated to helping you achieve peace of mind and body through personalized breathing techniques.
-          With just a few minutes a day, you can reduce stress, boost focus, and improve sleep."
-        </em>
+        <em>"We are dedicated to helping you achieve peace of mind and body through personalized breathing techniques. With just a few minutes a day, you can reduce stress, boost focus, and improve sleep."</em>
       </p>
     </div>
     <div class="contact-logo">
-      <img src="img/logo.png" alt="Breathe Better Logo">
+      <img src="img/logo.png" alt="Breathe Better brand logo">
     </div>
   </div>
   <p class="copyright">© 2025 BreatheBetter. All Rights Reserved.</p>
 </section>
-
 <script src="js/app.js"></script>
 </body>
 </html>
