--- a/index.html
+++ b/index.html
@@ -31,25 +31,33 @@
     </div>
   </div>
 </nav>
+
 <header class="hero">
   <div class="hero-content">
     <h1>Master Your Breathing: Easy Methods to Reduce Stress, Improve Sleep & Boost Focus</h1>
     <p>Controlled breathing helps manage stress, sharpen focus, and promote restful sleep. Explore proven techniques to calm your mind, ease anxiety, and improve lung health.</p>
   </div>
 </header>
+
 <section id="techniques" class="techniques-section">
   <h2>Top Breathwork Techniques for a Calm Mind</h2>
   <div class="techniques-wrapper">
     <div class="techniques-container">
-      <div class="technique">
+      <div class="technique"
+           data-title="4-7-8 Breathing"
+           data-description="The 4-7-8 breathing technique is designed to help you relax and fall asleep faster. Inhale for 4 seconds, hold for 7 seconds, and exhale for 8 seconds to calm your nervous system. Start feeling the difference with our guided practice.">
         <img src="img/breathwork-1.png" alt="Person practicing the 4-7-8 breathing method">
         <p><strong>4-7-8 Breathing:</strong> A Quick Way to Relax</p>
       </div>
-      <div class="technique">
+      <div class="technique"
+           data-title="Box Breathing"
+           data-description="Box Breathing improves focus and clarity by balancing your breath. Inhale, hold, exhale, and hold again for equal counts. Give it a try to enhance your concentration.">
         <img src="img/breathwork-2.png" alt="Illustration of box breathing with equal inhale, hold, exhale, hold">
         <p><strong>Box Breathing:</strong> For Focus and Clarity</p>
       </div>
-      <div class="technique">
+      <div class="technique"
+           data-title="Diaphragmatic Breathing"
+           data-description="Diaphragmatic Breathing encourages deeper, more effective breaths by engaging your diaphragm. This practice reduces stress and improves lung function. Experience the benefits with our guided session.">
         <img src="img/breathwork-3.png" alt="Diagram showing diaphragmatic breathing with belly movement">
         <p><strong>Diaphragmatic Breathing:</strong> For Better Oxygen Flow</p>
       </div>
@@ -64,6 +72,7 @@
     </div>
   </div>
 </section>
+
 <section id="improve-breathing" class="improve-section">
   <h2>Improve Your Breathing with These Techniques</h2>
   <div class="improve-container">
@@ -84,6 +93,7 @@
     </div>
   </div>
 </section>
+
 <section id="blog" class="blog-section">
   <h2>Explore Our Blog</h2>
   <div class="blog-wrapper">
@@ -115,6 +125,7 @@
     </div>
   </div>
 </section>
+
 <section id="download-app" class="download-app-section">
   <div class="download-app-wrapper">
     <h2>Download our app to start now!</h2>
@@ -128,6 +139,7 @@
     </div>
   </div>
 </section>
+
 <section id="faq" class="faq-section">
   <h2 class="faq-title">Frequently Asked Questions</h2>
   <div class="faq-container">
@@ -154,6 +166,7 @@
     </div>
   </div>
 </section>
+
 <section id="contact" class="contact-section">
   <div class="contact-container">
     <div class="contact-info">
@@ -176,6 +189,16 @@
   </div>
   <p class="copyright">© 2025 BreatheBetter. All Rights Reserved.</p>
 </section>
+
+<div class="modal" id="techniqueModal">
+  <div class="modal-content">
+    <span class="close-button">&times;</span>
+    <h2 id="modalTitle"></h2>
+    <p id="modalDescription"></p>
+    <button class="btn" id="tryFreeBtn">Try Free Now</button>
+  </div>
+</div>
+
 <script src="js/app.js"></script>
 </body>
 </html>
