--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
     <span class="close-button">&times;</span>
     <h2 id="modalTitle"></h2>
     <p id="modalDescription"></p>
+    <p class="cta-message">Ready to transform your breathing? Try our free guided exercises now!</p>
     <button class="btn" id="tryFreeBtn">Try Free Now</button>
   </div>
 </div>
