added meta title & meta desc.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Best Breathing Exercises for Stress & Focus | Try Now Free</title>
+  <meta name="title" content="Best Breathing Exercises for Stress & Focus | Try Now Free">
   <meta name="description" content="Discover the most effective breathing techniques for relaxation, focus, and better sleep. Learn 4-7-8 breathing, box breathing, and more. Start today!">
   <link rel="stylesheet" href="css/style.css">
 </head>
